# icnc-interfaces

./: README.md
gpio_msgs/: CMakeLists.txt  package.xml
gpio_msgs/msg/: GpioCmd.msg  GpioCmdArray.msg  GpioCmds.msg  GpioState.msg
gpio_msgs/srv/: SetGpioCmd.srv  SetGpioCmdArray.srv  SetGpioCmds.srv
icnc_msgs/: CMakeLists.txt  package.xml
icnc_msgs/msg/: GpioCmd.msg  GpioCmdArray.msg
inspect_msgs/: CMakeLists.txt  package.xml
inspect_msgs/msg/: Result.msg  Specification.msg
sensor_msgs_ext/: CMakeLists.txt  package.xml
sensor_msgs_ext/msg/: AirGaugeSensor.msg  ButtonArray.msg  Buttons.msg  DigitalInput.msg  TestElement.msg  TestStationReport.msg
